--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,7 +16,7 @@ theme:
     # Dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
-      primary: #FCBDF1
+      primary: pink
       accent: blue
       toggle:
         icon: material/toggle-switch
